# wrenched

./: .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  markdown-design.md  test.md  text.txt
.github/workflows/: build.yml  check.yml
app/: main.rs
src/: basic_types.rs  buffer.rs  code_text_layout.rs  code_widget.rs  command.rs  generation.rs  layout_flow.rs  lib.rs  main.rs  markdown.rs  mouse_event.rs  scene_utils.rs  svg_fonts.rs  theme.rs
src/markdown/: context.rs  elements.rs  mod.rs  parser.rs  text.rs
src/markdown/text/: layouted_text.rs  mod.rs  simple.rs  styles.rs
src/utils/: mod.rs
