[package]
name = "wrenched"
version = "0.1.0"
edition = "2021"

[dependencies]
ropey = "1.6"
crop = { version = "0.4", features = ["graphemes"] }
vello = { version = "0.4" }
winit = "0.30"
xilem = { git = "https://github.com/linebender/xilem", rev = "d77b31b892cfc5390c3fd49bc2f41da4101e3f24" }
masonry = { git = "https://github.com/linebender/xilem", rev = "d77b31b892cfc5390c3fd49bc2f41da4101e3f24" }
accesskit = "^0.17.0"
tracing = "0.1"
parley = { git = "https://github.com/linebender/parley", rev = "16b62518d467487ee15cb230fdb28530d89a8cf6", features = ["accesskit"] }
eyre = "0.6"
smallvec = "1.13"
color-backtrace = { version = "0.6", default-features = false }
tracing-subscriber = "0.3"
peniko = "0.3"
kurbo = "0.11"
rand = "0.8.5"
fontique = "0.2"
pulldown-cmark = "0.12.2"
image = "0.25"
ureq = "3.0.0"
usvg = "0.44.0"
tiny-skia = "0.11.4"
resvg = "0.44.0"

[[bin]]
name = "wrenched"
path = "app/main.rs"
